infrastructure/modules/compute/main.tf
# Security Group for the EC2 instance
resource "aws_security_group" "compute_sg" {
  name        = "${var.project}-compute-sg"
  description = "Allow SSH and HTTP access"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "${var.project}-compute-sg" }
}

# EC2 instance
resource "aws_instance" "compute" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  subnet_id                   = var.subnet_id
  vpc_security_group_ids      = [aws_security_group.compute_sg.id]
  associate_public_ip_address = var.associate_public_ip

  tags = {
    Name = "${var.project}-compute"
  }
}
